AJ-1143: Skip null relation values when determining relation columns. (#327)
33b8d45 - Formatting tweaks only to Improve test readability.
be6595b - Eliminate a * import and include some resources in the commit comment for why.
52ef9df - Fix issue that caused null values in relation columns to crash schema infererence.
3ab4e01 - Apply similar fix for multi-relation values too.